fix z-index on expand and remove kudos from boss card

--- a/src/app/styles/components/_personnel.scss
+++ b/src/app/styles/components/_personnel.scss
@@ -23,4 +23,5 @@
   padding: 0;
   height: 0;
   overflow: hidden;
+  z-index: 2;
 }
